fix(inputs): textarea auto-grow, consistent padding (#14683)
fixes #15375
fixes #15409
fixes #15411
fixes #15508

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -54,9 +54,10 @@
     cursor: default
     display: flex
     opacity: 0
-    padding-top: var(--v-field-padding-top)
     transition: inherit
     white-space: nowrap
+    padding-top: calc(var(--v-field-padding-top, 4px) + var(--v-input-padding-top, 0))
+    padding-bottom: var(--v-field-padding-bottom, 6px)
 
     .v-field--active &
       opacity: 1
