--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -18,6 +18,7 @@
   flex: 1 0
   grid-area: control
   position: relative
+  overflow: hidden
 
   &--disabled
     opacity: var(--v-disabled-opacity)
@@ -31,12 +32,8 @@
 /* endregion */
 /* region MODIFIERS */
 .v-field
-  $root: &
-
   &--prepended
     padding-inline-start: $field-control-affixed-padding
-    --v-field-padding-start: #{$field-control-affixed-inner-padding}
-    --v-field-padding-end: #{$field-control-affixed-inner-padding}
 
   &--appended
     padding-inline-end: $field-control-affixed-padding
@@ -56,16 +53,20 @@
   &--variant-underlined
     border-radius: 0
     padding: 0
-    --v-field-padding-start: 0
-    --v-field-padding-end: 0
-    --v-field-padding-top: 0
-
-    &.v-field--single-line
-      --v-field-padding-top: 0
+    --v-field-padding-start: 0px
+    --v-field-padding-end: 0px
+    --v-field-padding-top: 6px
+    --v-field-padding-bottom: 2px
 
   &--variant-outlined,
   &--single-line
-    --v-field-padding-top: 0
+    --v-field-padding-top: 0px
+    $root: &
+
+    @at-root
+      @include tools.density('v-input', $input-density) using ($modifier)
+        @at-root #{selector.nest(&, $root)}
+          --v-field-padding-bottom: #{16px + $modifier * .5}
 
   &--variant-solo,
   &--variant-filled
@@ -77,6 +78,7 @@
           --v-input-control-height: #{$field-control-height + $modifier}
           --v-field-padding-bottom: #{$field-control-padding-bottom + $modifier * .5}
 
+  &--variant-plain,
   &--variant-underlined
     $root: &
 
@@ -84,7 +86,13 @@
       @include tools.density('v-input', $input-density) using ($modifier)
         @at-root #{selector.nest(&, $root)}
           --v-input-control-height: #{$field-control-underlined-height + $modifier}
-          --v-field-padding-bottom: #{$field-control-padding-bottom + $modifier * .25}
+
+  // These are separate so they can override the default variant styles
+  &--prepended
+    --v-field-padding-start: #{$field-control-affixed-inner-padding}
+
+  &--appended
+    --v-field-padding-end: #{$field-control-affixed-inner-padding}
 
 /* endregion */
 /* region ELEMENTS */
@@ -94,11 +102,12 @@
   flex-wrap: wrap
   letter-spacing: $field-letter-spacing
   opacity: $field-input-opacity
+  min-height: var(--v-input-control-height, $input-control-height)
   padding-inline-start: var(--v-field-padding-start)
   padding-inline-end: var(--v-field-padding-end)
-  padding-top: var(--v-field-padding-top, $field-control-padding-top)
-  flex: 1 0 0
-  min-width: 0
+  padding-top: calc(var(--v-field-padding-top, $field-control-padding-top) + var(--v-input-padding-top, 0))
+  padding-bottom: var(--v-field-padding-bottom, $field-control-padding-bottom)
+  width: 100%
 
   input
     letter-spacing: inherit
@@ -119,10 +128,10 @@
 
 .v-field__field
   flex: 1 0
-  min-height: var(--v-input-control-height, $input-control-height)
   grid-area: field
-  padding-bottom: var(--v-field-padding-bottom, $field-control-padding-bottom)
   position: relative
+  align-items: flex-start
+  display: flex
 
 /* endregion */
 /* region AFFIXES */
@@ -137,7 +146,6 @@
   grid-area: append-inner
   padding-inline-start: var(--v-field-padding-after)
 
-.v-field__field,
 .v-field__prepend-inner,
 .v-field__append-inner,
 .v-field__clearable
@@ -190,6 +198,7 @@
   max-width: calc(100% - var(--v-field-padding-start) - var(--v-field-padding-end))
   pointer-events: none
   position: absolute
+  top: var(--v-input-padding-top, $field-control-padding-top)
   transform-origin: left center
   transition: $field-transition-timing
   transition-property: opacity, transform
@@ -225,7 +234,7 @@
 
     .v-field--variant-plain &,
     .v-field--variant-underlined &
-      transform: translateY(-6px)
+      transform: translateY(-16px)
       margin: 0
 
     .v-field--variant-outlined &
