--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -6,6 +6,7 @@
   flex: 1 1 auto
   font-size: $input-font-size
   font-weight: $input-font-weight
+  line-height: 1.5
 
   &--disabled
     pointer-events: none
