--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -13,7 +13,7 @@
   padding-inline-end: var(--v-scrollbar-offset)
   position: relative
   transition: $toolbar-transition
-  transition-property: height, transform, max-width
+  transition-property: height, width, transform, max-width, left, right, top, bottom
 
   @include tools.border($toolbar-border...)
   @include tools.elevation($toolbar-elevation)
