--- a/packages/vuetify/src/components/VNavigationDrawer/_variables.scss
+++ b/packages/vuetify/src/components/VNavigationDrawer/_variables.scss
@@ -21,7 +21,7 @@ $navigation-drawer-overflow-scrolling: touch !default;
 $navigation-drawer-rounded-border-radius: settings.$border-radius-root !default;
 $navigation-drawer-temporary-elevation: 16 !default;
 $navigation-drawer-transition-duration: 0.2s !default;
-$navigation-drawer-transition-property: box-shadow, transform, visibility, width !default;
+$navigation-drawer-transition-property: box-shadow, transform, visibility, width, height, left, right, top, bottom !default;
 $navigation-drawer-transition-timing-function: settings.$standard-easing !default;
 $navigation-drawer-will-change: transform !default;
 
