--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -45,6 +45,9 @@
   &--temporary
     @include tools.elevation($navigation-drawer-temporary-elevation)
 
+  .v-list
+    overflow: hidden
+
 .v-navigation-drawer__content
   flex: 0 1 auto
   height: $navigation-drawer-content-height
