--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -20,6 +20,10 @@
     padding-inline-start: $list-nav-padding
     padding-inline-end: $list-nav-padding
 
+  .v-navigation-drawer--rail:not(.v-navigation-drawer--is-hovering) &
+    .v-avatar
+      --v-avatar-height: 24px
+
   &--rounded
     @include tools.rounded($list-rounded-border-radius)
 
