feat(VRow): add space-evenly (#15586)
Co-authored-by: Kael <kaelwd@gmail.com>

closes #15581

--- a/packages/vuetify/src/styles/settings/_utilities.scss
+++ b/packages/vuetify/src/styles/settings/_utilities.scss
@@ -124,6 +124,7 @@ $utilities: () !default;
           center: center,
           space-between: space-between,
           space-around: space-around,
+          space-evenly: space-evenly,
           stretch: stretch,
         )
       ),
