--- a/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
+++ b/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
@@ -1,10 +1,10 @@
 @use './variables' as *
 
 .v-radio-group
-  grid-template-areas: "prepend label append" ". control ." "a messages b"
+  > .v-input__control
+    flex-direction: column
 
   > .v-label
-    grid-area: $radio-group-label-grid-area
     margin-inline-start: $radio-group-label-margin-inline-start
 
     + .v-selection-control-group
