--- a/packages/vuetify/src/components/VSelectionControlGroup/VSelectionControlGroup.sass
+++ b/packages/vuetify/src/components/VSelectionControlGroup/VSelectionControlGroup.sass
@@ -2,3 +2,8 @@
 
 .v-selection-control-group
   grid-area: $selection-control-group-grid-area
+  display: flex
+  flex-direction: column
+
+  &--inline
+    flex-direction: row
