feat(VAvatar): add variant support (#15717)

--- a/packages/vuetify/src/components/VAvatar/VAvatar.sass
+++ b/packages/vuetify/src/components/VAvatar/VAvatar.sass
@@ -19,7 +19,7 @@
   @include avatar-sizes($avatar-sizes)
   @include avatar-density(('height', 'width'), $avatar-density)
   @include tools.rounded($avatar-border-radius)
-  @include tools.theme($avatar-theme...)
+  @include tools.variant($avatar-variants...)
 
   &--rounded
     @include tools.rounded($avatar-rounded-border-radius)
