fix(VDialog): default to 100% width
fixes #14766
fixes #15403

--- a/packages/vuetify/src/components/VDialog/VDialog.sass
+++ b/packages/vuetify/src/components/VDialog/VDialog.sass
@@ -9,6 +9,7 @@
 
   .v-overlay__content
     max-height: calc(100% - #{$dialog-margin * 2})
+    width: calc(100% - #{$dialog-margin * 2})
     max-width: calc(100% - #{$dialog-margin * 2})
     margin: $dialog-margin
     display: flex
