--- a/packages/vuetify/src/styles/tools/_states.sass
+++ b/packages/vuetify/src/styles/tools/_states.sass
@@ -30,8 +30,13 @@
 
   &:hover
     #{$selector}
-      opacity: calc(#{map.get(settings.$states, 'activated')} * var(--v-theme-overlay-multiplier))
+      opacity: calc(#{map.get(settings.$states, 'activated') + map.get(settings.$states, 'hover')} * var(--v-theme-overlay-multiplier))
 
-  &:focus
+  &:focus-visible
     #{$selector}
-      opacity: calc(#{map.get(settings.$states, 'pressed')} * var(--v-theme-overlay-multiplier))
+      opacity: calc(#{map.get(settings.$states, 'activated') + map.get(settings.$states, 'focus')} * var(--v-theme-overlay-multiplier))
+
+  @supports not selector(:focus-visible)
+    &:focus
+      #{$selector}
+        opacity: calc(#{map.get(settings.$states, 'activated') + map.get(settings.$states, 'focus')} * var(--v-theme-overlay-multiplier))
