--- a/packages/vuetify/src/components/VFooter/_variables.scss
+++ b/packages/vuetify/src/components/VFooter/_variables.scss
@@ -3,6 +3,10 @@
 
 // VFooter
 $footer-background: rgb(var(--v-theme-surface)) !default;
+$footer-border-color: settings.$border-color-root !default;
+$footer-border-style: settings.$border-style-root !default;
+$footer-border-thin-width: thin !default;
+$footer-border-width: 0 !default;
 $footer-border-radius: map.get(settings.$rounded, 0) !default;
 $footer-color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity)) !default;
 $footer-flex: 1 1 auto !default;
@@ -13,6 +17,13 @@ $footer-positions: absolute fixed !default;
 $footer-rounded-border-radius: settings.$border-radius-root !default;
 
 // Lists
+$footer-border: (
+  $footer-border-color,
+  $footer-border-style,
+  $footer-border-width,
+  $footer-border-thin-width
+) !default;
+
 $footer-theme: (
   $footer-background,
   $footer-color
