fix(VSlider): add label (#15791)
closes #15732

Co-authored-by: John Leider <john@vuetifyjs.com>

--- a/packages/vuetify/src/components/VLabel/VLabel.sass
+++ b/packages/vuetify/src/components/VLabel/VLabel.sass
@@ -4,7 +4,6 @@
 
 .v-label
   align-items: center
-  cursor: pointer
   display: $label-display
   font-size: $label-font-size
   letter-spacing: $label-letter-spacing
@@ -13,3 +12,6 @@
   overflow: hidden
   text-overflow: ellipsis
   white-space: nowrap
+
+.v-label--clickable
+  cursor: pointer
