--- a/packages/vuetify/src/components/VFileInput/VFileInput.sass
+++ b/packages/vuetify/src/components/VFileInput/VFileInput.sass
@@ -1,4 +1,10 @@
 @use './variables' as *
+@use '../../styles/tools'
+@use 'sass:math'
+
+@at-root
+  @include tools.density('v-input', $file-input-chips-margin-bottom) using ($modifier)
+    --file-input-chips-margin-bottom: #{0px + math.div($modifier, 2)}
 
 // Block
 .v-file-input
@@ -9,3 +15,7 @@
     position: absolute
     top: 0
     width: 100%
+  
+  .v-chip
+    margin-top: $file-input-chips-margin-top
+    margin-bottom: var(--file-input-chips-margin-bottom)
