fix(VAutocomplete): show selections slot and the input side-by-side like v2 does (#15768)
fixes #15756

--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -90,5 +90,10 @@
         opacity: 0
 
     .v-field--focused
-      .v-autocomplete__selection
+      .v-autocomplete__selection-text
         opacity: 0
+
+  &--selection-slot
+    &.v-text-field input
+      position: relative
+      padding-inline-start: 0
