fix(VTable): table hover not working (#15962)
fixes #15950

--- a/packages/vuetify/src/components/VTable/VTable.sass
+++ b/packages/vuetify/src/components/VTable/VTable.sass
@@ -33,11 +33,12 @@
 
 
   &.v-table--hover
-    > table
-      > tbody
-        > tr
-          &:hover
-            background: $table-hover-color
+    > .v-table__wrapper
+      > table
+        > tbody
+          > tr
+            &:hover
+              background: $table-hover-color
 
   &.v-table--fixed-header
     thead th
