--- a/packages/vuetify/src/components/VKbd/VKbd.sass
+++ b/packages/vuetify/src/components/VKbd/VKbd.sass
@@ -2,9 +2,9 @@
 @use './variables' as *
 
 .v-kbd
-  background: rgb(var(--v-kbd-background-color))
+  background: rgb(var(--v-theme-kbd))
+  color: rgb(var(--v-theme-on-kbd))
   border-radius: $kbd-border-radius
-  color: rgb(var(--v-kbd-color))
   font-size: $kbd-font-size
   font-weight: $kbd-font-weight
   padding: $kbd-padding
