feat(VList): add keyboard navigation (#15998)
Closes #15428

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -239,6 +239,6 @@ $base-padding: list.nth($list-item-padding, 2)
 .v-list-group__items .v-list-item
   padding-inline-start: calc(#{$base-padding} + var(--indent-padding)) !important
 
-.v-list-group__header.v-list-item--active
+.v-list-group__header.v-list-item--active:not(:focus-visible)
   .v-list-item__overlay
-    display: none
+    opacity: 0
