fix(VTab/VTabs): use --v-tabs-height as default for --v-btn-height
fixes #14863

this wasn't actually fixed in 86b2cf1

--- a/packages/vuetify/src/components/VTabs/VTab.sass
+++ b/packages/vuetify/src/components/VTabs/VTab.sass
@@ -1,15 +1,12 @@
 @use './variables' as *
 
 .v-tab
+  --v-btn-height: var(--v-tabs-height)
   position: relative
   min-width: $tab-min-width
 
   .v-slide-group--horizontal &
     max-width: $tab-max-width
-
-  // override density specificity
-  &.v-tab.v-tab
-    height: var(--v-tabs-height)
 
   .v-slide-group--vertical &
     justify-content: start
