fix(VSelectionControl/VCheckbox/VSwitch): long label wrapping (#16194)
fixes https://github.com/vuetifyjs/vuetify/issues/15708

--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -56,7 +56,7 @@
   $switch-thumb-transform: $switch-track-width * .5 - $switch-thumb-width * .5 + $switch-thumb-offset
 
   .v-selection-control
-    height: var(--v-input-control-height)
+    min-height: var(--v-input-control-height)
 
   .v-selection-control__wrapper
     width: auto
