--- a/packages/vuetify/src/components/VSelectionControl/VSelectionControl.sass
+++ b/packages/vuetify/src/components/VSelectionControl/VSelectionControl.sass
@@ -14,6 +14,8 @@
   user-select: none
 
   .v-label
+    white-space: normal
+    word-break: break-word
     height: 100%
     width: 100%
 
@@ -33,6 +35,8 @@
   &--inline
     display: inline-flex
     flex: 0 0 auto
+    min-width: 0
+    max-width: 100%
 
     .v-label
       width: auto
