fix(VTab): increase selector specificity
fixes #16254
partially reverts ceaffe530eb21e40cee7f9b8c45aafdc60f94718

--- a/packages/vuetify/src/components/VTabs/VTab.sass
+++ b/packages/vuetify/src/components/VTabs/VTab.sass
@@ -1,9 +1,10 @@
 @use './variables' as *
 
 .v-tab
-  --v-btn-height: var(--v-tabs-height)
-  position: relative
-  min-width: $tab-min-width
+  // override v-btn size specificity
+  &.v-tab
+    --v-btn-height: var(--v-tabs-height)
+    min-width: $tab-min-width
 
   .v-slide-group--horizontal &
     max-width: $tab-max-width
