fix(VListItem): add maximum width for flex containers

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -9,6 +9,7 @@
   grid-template-areas: "prepend content append"
   grid-template-columns: max-content auto max-content
   outline: none
+  max-width: 100%
   padding: $list-item-padding
   position: relative
   text-decoration: none
