--- a/packages/vuetify/src/components/VGrid/VGrid.sass
+++ b/packages/vuetify/src/components/VGrid/VGrid.sass
@@ -7,6 +7,11 @@
 
   &--fluid
     max-width: 100%
+    
+  &.fill-height
+    align-items: center
+    display: flex
+    flex-wrap: wrap
 
 // Row
 //
