fix(VListItem): vertical spacing with nav prop and groups

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -198,7 +198,7 @@
     padding-inline-end: $list-nav-padding
 
     .v-list &
-      &:not(:last-child):not(:only-child)
+      &:not(:only-child)
         margin-bottom: $list-item-nav-margin-top
 
 .v-list-item__underlay
