--- a/packages/vuetify/src/styles/elements/_global.sass
+++ b/packages/vuetify/src/styles/elements/_global.sass
@@ -14,6 +14,7 @@ html.overflow-y-hidden
   overflow-y: hidden !important
 
 :root
+  --v-theme-overlay-multiplier: 1
   --v-scrollbar-offset: 0px
 
 // iOS Safari hack to allow click events on body
