--- a/packages/vuetify/src/labs/VDataTable/VDataTable.sass
+++ b/packages/vuetify/src/labs/VDataTable/VDataTable.sass
@@ -14,6 +14,9 @@
   &--focus
     border: 1px dotted black
 
+  &--clickable
+    cursor: pointer
+
 .v-data-table
   .v-table__wrapper
     > table
