--- a/packages/vuetify/src/components/VOverlay/VOverlay.sass
+++ b/packages/vuetify/src/components/VOverlay/VOverlay.sass
@@ -57,4 +57,4 @@
   position: absolute
 
 .v-overlay--scroll-blocked
-  padding-inline-end: var(--v-scrollbar-offset)
+  margin-inline-end: var(--v-scrollbar-offset)
