fix(VSwitch): thumb inherits currentColor as default (#16525)
fixes  #16486

Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -18,6 +18,10 @@
   .v-selection-control--error:not(.v-selection-control--disabled) &
     background-color: $switch-error-background-color
 
+.v-switch__thumb
+  .v-selection-control--dirty &
+    color: currentColor
+
 .v-switch__track
   border-radius: $switch-track-radius
   height: $switch-track-height
