fix(VAutocomplete): restore arrow keys select and delete (#16629)
fixes #16627

Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -71,6 +71,16 @@
       &:first-child
         margin-inline-start: 0
 
+  &--selecting-index
+    .v-autocomplete__selection
+      opacity: var(--v-medium-emphasis-opacity)
+
+      &--selected
+        opacity: 1
+
+    .v-field__input > input
+      caret-color: transparent
+
   &--single
     &.v-text-field input
       flex: 1 1
