--- a/packages/vuetify/src/components/VChip/VChip.sass
+++ b/packages/vuetify/src/components/VChip/VChip.sass
@@ -38,12 +38,13 @@
 
 // Elements
 .v-chip__content
+  align-items: center
+  display: inline-flex
+
   .v-autocomplete__selection &,
   .v-combobox__selection &,
   .v-select__selection &
     overflow: hidden
-    text-overflow: ellipsis
-    white-space: nowrap
 
 .v-chip__filter,
 .v-chip__prepend,
